k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cobrowse
  labels:
    app.kubernetes.io/part-of: cobrowse
